--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raindays-shop for rainy comfort</title>
   <link rel="stylesheet" href="src/css/normalize.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="src/css/styles.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700;800&display=swap');
@@ -47,18 +48,18 @@
         </ul>
       </nav>
       <div class="icons flex">
-        <a href="">
+        <a class="icons__link" href="">
           <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
             <path d="M2 32V30.3333C2 24.8105 7.03679 20.3333 13.25 20.3333H20.75C26.9632 20.3333 32 24.8105 32 30.3333V32" stroke="#FFBFB1" stroke-width="3" stroke-linecap="round"/>
             <path d="M17 15.3333C12.8579 15.3333 9.5 12.3486 9.5 8.66667C9.5 4.98477 12.8579 2 17 2C21.1421 2 24.5 4.98477 24.5 8.66667C24.5 12.3486 21.1421 15.3333 17 15.3333Z" stroke="#FFBFB1" stroke-width="3" stroke-linecap="round"/>
           </svg>
         </a>
-        <a href="">
+        <a class="icons__link" href="">
           <svg xmlns="http://www.w3.org/2000/svg" width="31" height="28" viewBox="0 0 31 28" fill="none">
             <path d="M27.8934 2.96623C26.3063 1.28855 24.2024 0.264585 21.9618 0.0793095C19.7212 -0.105966 17.4916 0.559659 15.6758 1.95595C13.7708 0.462059 11.3996 -0.215343 9.03986 0.0601574C6.68008 0.335657 4.50695 1.54359 2.95809 3.44072C1.40923 5.33784 0.599685 7.78324 0.692483 10.2845C0.785281 12.7857 1.77353 15.1569 3.45821 16.9207L12.7562 26.7393C13.5348 27.5472 14.5834 28 15.6758 28C16.7682 28 17.8169 27.5472 18.5955 26.7393L27.8934 16.9207C29.6416 15.0663 30.6228 12.558 30.6228 9.94346C30.6228 7.32894 29.6416 4.82061 27.8934 2.96623ZM25.7823 14.7423L16.4843 24.5451C16.3785 24.6578 16.2526 24.7472 16.1138 24.8082C15.9751 24.8692 15.8262 24.9007 15.6758 24.9007C15.5255 24.9007 15.3766 24.8692 15.2378 24.8082C15.099 24.7472 14.9731 24.6578 14.8673 24.5451L5.56934 14.6949C4.39513 13.4295 3.73761 11.7296 3.73761 9.95925C3.73761 8.18895 4.39513 6.48903 5.56934 5.22357C6.76588 3.97807 8.37965 3.27968 10.0611 3.27968C11.7426 3.27968 13.3563 3.97807 14.5529 5.22357C14.6921 5.37152 14.8577 5.48896 15.0401 5.5691C15.2226 5.64924 15.4183 5.6905 15.6159 5.6905C15.8136 5.6905 16.0093 5.64924 16.1917 5.5691C16.3742 5.48896 16.5398 5.37152 16.679 5.22357C17.8755 3.97807 19.4893 3.27968 21.1707 3.27968C22.8522 3.27968 24.466 3.97807 25.6625 5.22357C26.8529 6.47245 27.532 8.16315 27.5544 9.9335C27.5767 11.7038 26.9406 13.413 25.7823 14.6949V14.7423Z" fill="#FFBFB1"/>
           </svg>
         </a>
-        <a href="">
+        <a class="icons__link" href="">
           <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
             <g clip-path="url(#clip0_767_1627)">
               <path d="M11.8203 27.5C12.5092 27.5 13.0677 26.9404 13.0677 26.25C13.0677 25.5596 12.5092 25 11.8203 25C11.1314 25 10.5729 25.5596 10.5729 26.25C10.5729 26.9404 11.1314 27.5 11.8203 27.5Z" stroke="#FFBFB1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -111,6 +112,75 @@
       </div>
     </div>
   </section>
+  <section class="trends">
+    <div class="trends__content flex">
+      <h2 class="trends__title">
+        Trending Now
+      </h2>
+      <p class="trends__desc">
+        We have thousands of new accessories for men and women in RainyDays store
+      </p>
+      <div class="trends__btn">
+        <button class="btn-featured btn-reset">Featured Product</button>
+        <button class="btn-new btn-reset">New Product</button>
+      </div>
+    </div>
+<div class="slide-container swiper">
+  <div class="slide-content">
+    <div class="slide-wrapper swiper-wrapper">
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-1.png" alt="red rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-2.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-3.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-4.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-5.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-6.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-1.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-2.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-3.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-4.png" alt="rainydays jacket"></div>
+      </div>
+      <div class="slide swiper-slide">
+        <div class="slide-image"><img src="assets/images/jacket-5.png" alt="rainydays jacket"></div>
+      </div>
+    </div>
+  </div>
+  <!-- If we need navigation buttons -->
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+</div>
+  </section>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<script>
+  var swiper = new Swiper(".slide-content", {
+    slidesPerView: 6,
+    spaceBetween: 50,
+    loop: true,
+
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+  });
+</script>
 </html>
