--- a/index.html
+++ b/index.html
@@ -130,36 +130,47 @@
     <div class="slide-wrapper swiper-wrapper">
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-1.png" alt="red rainydays jacket"></div>
+        <p class="slide-text">Fit Bomber Jacket <br>$200.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-2.png" alt="rainydays jacket"></div>
+        <p class="slide-text">The Yoko Jacke <br>$350.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-3.png" alt="rainydays jacket"></div>
+        <p class="slide-text">Belgravia High Top <br>$250.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-4.png" alt="rainydays jacket"></div>
+        <p class="slide-text">MyGica Rain Jacket <br>$200.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-5.png" alt="rainydays jacket"></div>
+        <p class="slide-text">Maxima hoodie <br>$100.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-6.png" alt="rainydays jacket"></div>
+        <p class="slide-text">Fit Bomber Jacket <br>$200.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-1.png" alt="rainydays jacket"></div>
+        <p class="slide-text">Fit Bomber Jacket <br>$200.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-2.png" alt="rainydays jacket"></div>
+        <p class="slide-text">Fit Bomber Jacket <br>$200.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-3.png" alt="rainydays jacket"></div>
+        <p class="slide-text">Fit Bomber Jacket <br>$200.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-4.png" alt="rainydays jacket"></div>
+        <p class="slide-text">Fit Bomber Jacket <br>$200.00</p>
       </div>
       <div class="slide swiper-slide">
         <div class="slide-image"><img src="assets/images/jacket-5.png" alt="rainydays jacket"></div>
+        <p class="slide-text">Fit Bomber Jacket <br>$200.00</p>
       </div>
     </div>
   </div>
