jackets list page completed

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <title>Raindays-shop for rainy comfort</title>
   <link rel="stylesheet" href="src/css/normalize.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="src/css/global.css">
+  <link rel="stylesheet" href="src/css/_variables.css">
   <link rel="stylesheet" href="src/css/styles.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700;800&display=swap');
   </style>
 </head>
-<body>
+<body style="background-color: #F9EBE3;">
   <header class="header">
     <div class="container header__container flex">
       <a class="header__logo" href="">
