contacts page completed

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           Stay updated on other gear we think you’ll like. Sign up to receive Helly Hansen news, promotions, and other
           online content.
         </p>
-        <form class="form flex" action="POST">
+        <form class="news__form flex" action="POST">
           <input type="email" name="email" id="email" placeholder="Enter your email">
           <button class="form__btn btn-reset" type="submit">Sign me up</button>
           <div class="check">
