added hover state to header

--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
     <link rel="stylesheet" href="src/css/normalize.css">
+    <link rel="stylesheet" href="src/css/_variables.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/styles.css">
     <link rel="stylesheet" href="src/css/contacts.css">
@@ -13,7 +14,7 @@
     <header class="header-jp">
         <div class="container header__container flex">
             <a class="header__logo" href="#">
-                <img src="assets/images/logo-dark.png" alt="Rainydays company logo">
+                <img src="assets/images/logo-dark.png"  alt="Rainydays company logo">
             </a>
             <nav class="nav">
                 <ul class="nav__list list-reset flex">
