initial pages link up done

--- a/contacts.html
+++ b/contacts.html
@@ -13,28 +13,28 @@
 <body>
     <header class="header-jp">
         <div class="container header__container flex">
-            <a class="header__logo" href="#">
+            <a class="header__logo" href="index.html">
                 <img src="assets/images/logo-dark.png"  alt="Rainydays company logo">
             </a>
             <nav class="nav">
                 <ul class="nav__list list-reset flex">
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Home</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Men</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Women</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Women</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Kids</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">About us</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="about.html">About us</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Contacts</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="contacts.html">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -53,7 +53,7 @@
                             fill="black" />
                     </svg>
                 </a>
-                <a class="icons__link" href="">
+                <a class="icons__link" href="cart.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
                         <g clip-path="url(#clip0_767_1627)">
                             <path
