--- a/about.html
+++ b/about.html
@@ -13,28 +13,28 @@
 <body class="about-us">
     <header class="header-jp">
         <div class="container header__container flex">
-            <a class="header__logo" href="#">
+            <a class="header__logo" href="index.html">
                 <img src="assets/images/logo-dark.png"  alt="Rainydays company logo">
             </a>
             <nav class="nav">
                 <ul class="nav__list list-reset flex">
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Home</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Men</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Women</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Women</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Kids</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">About us</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="about.html">About us</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Contacts</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="contacts.html">Contacts</a>
                     </li>
                 </ul>
             </nav>
