--- a/cart.html
+++ b/cart.html
@@ -14,28 +14,28 @@
 <body>
     <header class="header-jp">
         <div class="container header__container flex">
-            <a class="header__logo" href="#">
+            <a class="header__logo" href="index.html">
                 <img src="assets/images/logo-dark.png" alt="Rainydays company logo">
             </a>
             <nav class="nav">
                 <ul class="nav__list list-reset flex">
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Home</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="index.html">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Men</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Men</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Women</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Women</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Kids</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Kids</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">About us</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">About us</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" style="color:var(--text-primary)" href="#">Contacts</a>
+                        <a class="nav__link" style="color:var(--text-primary)" href="list.html">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -54,7 +54,7 @@
                             fill="black" />
                     </svg>
                 </a>
-                <a class="icons__link" href="">
+                <a class="icons__link" href="cart.html">
                     <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
                         <g clip-path="url(#clip0_767_1627)">
                             <path
@@ -209,7 +209,7 @@
                     <p>210.00 USD</p>
                 </div>
                 <div class="btn-wrapper">
-                    <button class="btn-reset checkout">CHECKOUT</button>
+                    <a href="payment.html" class="btn-reset checkout">CHECKOUT</a>
                 </div>
             </form>
             <div class="shipping">
