burger menu added

--- a/about.html
+++ b/about.html
@@ -11,11 +11,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="src/css/styles.css">
     <link rel="stylesheet" href="src/css/about.css">
+    <link rel="stylesheet" href="src/css/media.css">
 </head>
 
 <body class="about-us">
     <header class="header-jp">
         <div class="container header__container flex">
+            <button class="btn-reset burger">
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+              </button>
             <a class="header__logo" href="index.html">
                 <img src="assets/images/logo-dark.png" alt="Rainydays company logo">
             </a>
@@ -553,4 +559,5 @@
         </div>
     </footer>
 </body>
+<script src="js/media.js"></script>
 </html>
