--- a/contacts.html
+++ b/contacts.html
@@ -9,10 +9,16 @@
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/styles.css">
     <link rel="stylesheet" href="src/css/contacts.css">
+    <link rel="stylesheet" href="src/css/media.css">
 </head>
 <body>
     <header class="header-jp">
         <div class="container header__container flex">
+          <button class="btn-reset burger">
+            <span class="burger__line"></span>
+            <span class="burger__line"></span>
+            <span class="burger__line"></span>
+          </button>
             <a class="header__logo" href="index.html">
                 <img src="assets/images/logo-dark.png"  alt="Rainydays company logo">
             </a>
@@ -324,4 +330,5 @@
         </div>
       </footer>
 </body>
+<script src="js/media.js"></script>
 </html>
