--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
   <link rel="stylesheet" href="src/css/global.css">
   <link rel="stylesheet" href="src/css/_variables.css">
   <link rel="stylesheet" href="src/css/styles.css">
+  <link rel="stylesheet" href="src/css/media.css">
 </head>
 
 <body class="body-index">
   <header class="header" onmouseover="changeTheme()" onmouseout="resetTheme()">
     <div class="container header__container flex">
+      <button class="btn-reset burger">
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+        <span class="burger__line"></span>
+      </button>
       <a class="header__logo" href="index.html">
         <img src="assets/images/logo-light.png" alt="Rainydays light logo" id="logo">
       </a>
@@ -441,8 +447,8 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <script>
   var swiper = new Swiper(".slide-content", {
-    slidesPerView: 6,
-    spaceBetween: 50,
+    slidesPerView: 5,
+    spaceBetween: 30,
     loop: true,
 
     navigation: {
@@ -466,5 +472,6 @@
   }
   
 </script>
+<script src="js/media.js"></script>
 
 </html>
