--- a/list.html
+++ b/list.html
@@ -11,11 +11,17 @@
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/styles.css">
     <link rel="stylesheet" href="src/css/list.css">
+    <link rel="stylesheet" href="src/css/media.css">
 </head>
 
 <body class="loj">
     <header class="header-jp">
         <div class="container header__container flex">
+            <button class="btn-reset burger">
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+                <span class="burger__line"></span>
+              </button>
             <a class="header__logo" href="index.html">
                 <img src="assets/images/logo-dark.png" alt="Rainydays company logo">
             </a>
@@ -824,5 +830,6 @@
         })
     })
 </script>
+<script src="js/media.js"></script>
 
 </html>
