added responsiveness to jacket html

--- a/jacket.html
+++ b/jacket.html
@@ -183,34 +183,36 @@
                         </label>
                     </div>
                     <div class="item-3-review flex">
-                        <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_829_215)">
-                                <path
-                                    d="M17.041 15C17.041 15.5304 16.8415 16.0391 16.4864 16.4142C16.1313 16.7893 15.6497 17 15.1475 17H3.78689L0 21V5C0 4.46957 0.199487 3.96086 0.554576 3.58579C0.909666 3.21071 1.39127 3 1.89344 3H15.1475C15.6497 3 16.1313 3.21071 16.4864 3.58579C16.8415 3.96086 17.041 4.46957 17.041 5V15Z"
-                                    fill="#0A3641" fill-opacity="0.5" stroke="#0A3641" stroke-opacity="0.5"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </g>
-                            <defs>
-                                <clippath id="clip0_829_215">
-                                    <rect width="22.7213" height="24" fill="white" />
-                                </clippath>
-                            </defs>
-                        </svg>
-                        <a href="readReview">Read user review |</a>
-                        <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_829_219)">
-                                <path
-                                    d="M17.1762 3C17.4248 2.73735 17.72 2.52901 18.0449 2.38687C18.3698 2.24473 18.718 2.17157 19.0696 2.17157C19.4212 2.17157 19.7694 2.24473 20.0943 2.38687C20.4192 2.52901 20.7144 2.73735 20.963 3C21.2117 3.26264 21.4089 3.57444 21.5435 3.9176C21.6781 4.26077 21.7473 4.62856 21.7473 5C21.7473 5.37143 21.6781 5.73923 21.5435 6.08239C21.4089 6.42555 21.2117 6.73735 20.963 7L8.18231 20.5L2.97534 22L4.39542 16.5L17.1762 3Z"
-                                    fill="#0A3641" fill-opacity="0.5" stroke="#0A3641" stroke-opacity="0.5"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </g>
-                            <defs>
-                                <clippath id="clip0_829_219">
-                                    <rect width="22.7213" height="24" fill="white" transform="translate(0.135254)" />
-                                </clippath>
-                            </defs>
-                        </svg>
-                        <a href="#writeReview">Write your review</a>
+                        <a href="readReview">Read user review
+                            <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_829_215)">
+                                    <path
+                                        d="M17.041 15C17.041 15.5304 16.8415 16.0391 16.4864 16.4142C16.1313 16.7893 15.6497 17 15.1475 17H3.78689L0 21V5C0 4.46957 0.199487 3.96086 0.554576 3.58579C0.909666 3.21071 1.39127 3 1.89344 3H15.1475C15.6497 3 16.1313 3.21071 16.4864 3.58579C16.8415 3.96086 17.041 4.46957 17.041 5V15Z"
+                                        fill="#0A3641" fill-opacity="0.5" stroke="#0A3641" stroke-opacity="0.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </g>
+                                <defs>
+                                    <clippath id="clip0_829_215">
+                                        <rect width="22.7213" height="24" fill="white" />
+                                    </clippath>
+                                </defs>
+                            </svg>
+                        </a>
+                        <a href="#writeReview">Write your review
+                            <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_829_219)">
+                                    <path
+                                        d="M17.1762 3C17.4248 2.73735 17.72 2.52901 18.0449 2.38687C18.3698 2.24473 18.718 2.17157 19.0696 2.17157C19.4212 2.17157 19.7694 2.24473 20.0943 2.38687C20.4192 2.52901 20.7144 2.73735 20.963 3C21.2117 3.26264 21.4089 3.57444 21.5435 3.9176C21.6781 4.26077 21.7473 4.62856 21.7473 5C21.7473 5.37143 21.6781 5.73923 21.5435 6.08239C21.4089 6.42555 21.2117 6.73735 20.963 7L8.18231 20.5L2.97534 22L4.39542 16.5L17.1762 3Z"
+                                        fill="#0A3641" fill-opacity="0.5" stroke="#0A3641" stroke-opacity="0.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </g>
+                                <defs>
+                                    <clippath id="clip0_829_219">
+                                        <rect width="22.7213" height="24" fill="white" transform="translate(0.135254)" />
+                                    </clippath>
+                                </defs>
+                            </svg>
+                        </a>
                     </div>
                     <div class="size-selector">
                         <label for="size">Size: <span></span></label>
@@ -230,7 +232,7 @@
                         <div class="color color-green"></div>
                     </div>
                 </div>
-                <div class="item-3-quantity grid">
+                <div class="item-3-quantity flex">
                     <label for="quantity">Quantity</label>
                     <input type="number" id="quantity" name="quantity" value="1" min="1">
                     <button class="btn-reset addToCart">ADD TO CART</button>
