added responsiveness to list html

--- a/list.html
+++ b/list.html
@@ -174,8 +174,8 @@
                     </label>
                 </div>
                 <div class="select-wrapper flex">
+                    <button class=" btn-reset filter__btn">Filter</button>
                     <div class="filter flex">
-                        <span class="filter__title">Filter:</span>
                         <label for="color">Color</label>
                         <select name="color" id="color">
                             <option value="red">Red</option>
