added responsiveness to about html

--- a/about.html
+++ b/about.html
@@ -87,14 +87,16 @@
     </header>
     <section class="handcraft">
         <div class="handcraft__wrapper wrap flex">
-            <h2 class="handcraft__title">HANDCRAFTED WITH THOUGHT IN NORWAY</h2>
-            <p class="handcraft__desc">
-                Faded short sleeves t-shirt with high neckline. Soft and stretchy material for a comfortable fit.
-                Accessorize with a straw hat and you're ready for summer! Faded short sleeves t-shirt with high
-                neckline. Soft and stretchy material for a comfortable fit. Accessorize with a straw hat and you're
-                ready for summer!
-            </p>
-            <button class="btn-reset readMore">READ MORE</button>
+            <div class="container">
+                <h2 class="handcraft__title">HANDCRAFTED WITH THOUGHT IN NORWAY</h2>
+                <p class="handcraft__desc">
+                    Faded short sleeves t-shirt with high neckline. Soft and stretchy material for a comfortable fit.
+                    Accessorize with a straw hat and you're ready for summer! Faded short sleeves t-shirt with high
+                    neckline. Soft and stretchy material for a comfortable fit. Accessorize with a straw hat and you're
+                    ready for summer!
+                </p>
+                <button class="btn-reset readMore">READ MORE</button>
+            </div>
         </div>
     </section>
     <section class="designers">
@@ -118,11 +120,13 @@
         </div>
     </div>
     <section class="team">
-        <h2 class="team__title">MEET THE TEAM</h2>
         <div class="container">
-            <ul class="list-reset team__list">
+            <h2 class="team__title">MEET THE TEAM</h2>
+            <ul class="list-reset team__list grid">
                 <li class="team__item member flex">
-                    <img src="assets/images/team-1.jpg" alt="Rainydays team member">
+                    <div>
+                        <img src="assets/images/team-1.jpg" alt="Rainydays team member">
+                    </div>
                     <div class="team__info">
                         <h3 class="member__name">Andy Andy</h3>
                     <p class="member__position">Designer</p>
@@ -177,7 +181,9 @@
                     </div>
                 </li>
                 <li class="team__item member flex">
-                    <img src="assets/images/team-2.jpg" alt="Rainydays team member">
+                    <div>
+                        <img src="assets/images/team-2.jpg" alt="Rainydays team member">
+                    </div>
                     <div class="team__info">
                         <h3 class="member__name">Joseph John</h3>
                     <p class="member__position">Designer</p>
@@ -232,7 +238,9 @@
                     </div>                    
                 </li>
                 <li class="team__item member flex">
-                    <img src="assets/images/team-3.jpg" alt="Rainydays team member">
+                    <div>
+                        <img src="assets/images/team-3.jpg" alt="Rainydays team member">
+                    </div>
                     <div class="team__info">
                         <h3 class="member__name">Julia Julia</h3>
                     <p class="member__position">Designer</p>
@@ -287,7 +295,9 @@
                     </div>
                 </li>
                 <li class="team__item member flex">
-                    <img src="assets/images/team-4.jpg" alt="Rainydays team member">
+                    <div>
+                        <img src="assets/images/team-4.jpg" alt="Rainydays team member">
+                    </div>
                     <div class="team__info">
                         <h3 class="member__name">Olav Olav</h3>
                     <p class="member__position">Designer</p>
