added responsiveness to cart and payment html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </section>
   <section class="features">
     <div class="container">
-      <div class="wrapper flex">
+      <div class="features-wrapper flex">
         <div class="card flex">
           <div class="card__ellipse">
             <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 70 71" fill="none">
