--- a/payment.html
+++ b/payment.html
@@ -488,7 +488,7 @@
 
     tippy('#CVV', {
         content: '3 digits on the back of your card',
-        placement: 'right',
+        placement: 'bottom',
     })
 </script>
 <script>
