--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="src/css/normalize.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <link rel="stylesheet" href="src/css/global.css">
-  <link rel="stylesheet" href="src/css/_variables.css">
+  <link rel="stylesheet" href="src/css/variables.css">
   <link rel="stylesheet" href="src/css/styles.css">
   <link rel="stylesheet" href="src/css/media.css">
 </head>
