--- a/jacket.html
+++ b/jacket.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacket specific page</title>
     <link rel="stylesheet" href="src/css/choices.min.css">
-    <link rel="stylesheet" href="src/css/_variables.css">
+    <link rel="stylesheet" href="src/css/variables.css">
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/styles.css">
